2004-03-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (parse_opt_Z1): Fix typo
	* interface/alsaseq_c.c, interface/rtsyn_common.c,
	  interface/w32g_pref.c, timidity/playmidi.c:
	  Change behavior so that keysig control may not react
	  when initial keysig option for pure intonation is specified

2004-03-04  mput <root@mput.dip.jp>

	* timidity/readmidi.c (set_xg_chorus_type): Re-activate flanger

2004-03-04  mput <root@mput.dip.jp>

	* timidity/reverb.h: Fix undeclared type error

2004-03-03  Saito <saito@intaa.net>

	* timidity/reverb.[ch], timidity/playmidi.c, timidity/readmidi.[ch]:
	  Under construction for XG insertion / variation / system effects.

2004-03-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/recache.c: Beautify (functionally no change)

2004-03-02  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* configs/msc7-project.zip:
	  Fix about Windows Installer.

2004-03-02  mput <root@mput.dip.jp>

	* timidity/output.h, timidity/common.h, timidity/readmidi.h,
	  timidity/miditrace.h: Fix #inlude dependencies

2004-03-02  Saito <saito@intaa.net>

	* timidity/playmidi.c, timidity/readmidi.[ch],
	  timidity/reverb.[ch], timidity/effect.c, timidity/tables.[ch]:
	  Under construction for XG insertion / variation / system effects.

2004-03-02  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Fixed to set drumch on program change (GM2).

2004-03-01  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* README(.ja), INSTALL(.ja),
	  doc/C/timidity.1, doc/ja_JP.ujis/timidity.1,
	  doc/ja_JP.ujis/README.m2m: Update

2004-03-01  Saito <saito@intaa.net>

	* timidity/w32g_subwin3.c:
	  Fix Win32GUI tracer window.

2004-02-29  mput <root@mput.dip.jp>

	* configure.in: version to 2.13.0-rc2

2004-02-29  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/ja_JP.ujis/README.dl:
	  Was written in iso-2022-jp, convert to eucJP
	* doc/C/README.mts, doc/ja_JP.ujis/README.mts: Add
	* doc/C/Makefile.{am,in}, doc/ja_JP.ujis/Makefile.{am,in}:
	  Fix to fit with change above
